# Colosseum

./: .gitattributes  .gitignore  Colosseum.bat  _probe.bat  dev.bat
agents/: handoff-genre-page-codex.md
chatgpt_requests/20260629-171426-colosseum-taskbar-unified-downloads-panel-plan-review/: downloads-page-concept-b-taskbar.html  manifest.json  request.md  response.md
mocks/: _gen_genre.js  _gen_genre_index.js  biblio-search.html  biblio-series.html  biblio.html  genre-index.html  genre.html  os-shell-taskbar-mock.html  sources-redesign.html
native/: CMakeLists.txt  MangaEngine.h  ProgressStore.h  SessionStore.h  build-msvc.bat  main.cpp
native/engine/: BookDownloader.cpp  BookDownloader.h  MangaDownloader.cpp  MangaDownloader.h  MangaFireCatalogClient.cpp  MangaFireCatalogClient.h  MangaResult.h  MangaScraper.h  MangaSeriesDetail.h  WeebCentralScraper.cpp  WeebCentralScraper.h
native/player/: mpvitem.cpp  mpvitem.h  mpvproperties.h  streamserver.cpp  streamserver.h
native/reader/: BookBridge.cpp  BookBridge.h
native/series/: seriesindex.cpp  seriesindex.h
native/tests/: seriesindex_smoke.cpp
qml/: AudioMenu.qml  BiblioApi.js  BiblioBook.qml  BiblioGenreApi.js  BiblioGenrePage.qml  BiblioLookupSelector.js  BiblioSearch.qml  BiblioSeries.qml  BiblioSeriesFold.js  BiblioWorld.qml  BookReader.qml  BookReaderLaunch.js  Bookshelf.qml  BootSplash.qml  CarouselSlide.qml  Catalog.js  ChromeScrim.qml  CinematicPage.qml  ContinueCovers.js  ContinueRow.qml  DemoWorld.qml  FeaturedCarousel.qml  GenreApi.js  GenreIndex.qml  GenreIndexApi.js  GenreMosaic.qml  GenrePage.qml  Glass.qml  Main.qml  MangaReader.qml  MangaSeries.qml  MangaVolumes.js  McuApi.js  PersonalizePage.qml  PlayerPage.qml  PortraitTile.qml  PosterRail.qml  ReaderEngine.js  SearchSurface.qml  SourcesSheet.qml  (+36 more)
resources/book_reader/: ebook_reader.html  qt_bridge_shim.js
resources/book_reader/domains/books/reader/: custom_select.js  reader_core.js  reader_standalone_boot.js  reader_state.js
resources/book_reader/services/: api_gateway.js
resources/book_reader/styles/: books-reader.css
tools/: biblio_series.db  biblio_series_index.py  enrich_biblio_genres.py
